--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -37,11 +37,10 @@ html {
 	/* margin-left: 15em; */
 	margin-top: -20em;
 	font-size: 24px;
-	font-style: italic;
-	font-weight: bold;
 	margin-right: 35%;
 	margin-left: 35%;
 	text-align: center;
+	font-family: "Brenner Mono Light Italic";
 }
 
 .voice2 {
