--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -46,7 +46,7 @@ html {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 15em;
-	box-shadow: 1px 1px 50px 20px #A5B19E;
+	box-shadow: 1px 1px 25px 20px #A5B19E;
 }
 
 #closed-captions p {
@@ -64,14 +64,15 @@ html {
 
 
 .voice1 { /* robot voice */
-	color: lime;
+	padding: 5px;
+	color: White;
 	/* margin-left: 15em; */
 	margin-top: -20em;
 	font-size: 24px;
-	margin-right: 35%;
-	margin-left: 35%;
-	text-align: center;
-	font-family: "Brenner light";
+	/* margin-right: 35%; */
+	margin-left: 31.6%;
+	text-align: left;
+	font-family: "Brenner Sans Light Italic";
 }
 
 .voice2 { /* KD6 voice */
@@ -105,69 +106,115 @@ The first paragraph, with extended timing for
 You probably want to change the styling.
 ********************************************** */
 
+
+/* ================================================ */
+/*		Officer K D 6 - 3 . 7. Let’s begin. Ready?		*/
+/* ================================================ */
+
 .p0 span {
 	opacity: 0;
 	/* font-family: brenner; */
 }
+
+/* Officer */
 .p0.on span:first-of-type {
 	opacity: 1;
 	transition: 0s;
 	font-weight: 200;
 }
+/* K */
 .p0.on span:nth-of-type(2) {
 	opacity: 1;
 	transition: 0s .4s;
 	margin-right: -.25em;
-	font-weight: 400;
-	color: pink;
+	font-weight: 200;
+	color: lime;
+	background-color: black;
+	padding: 5px;
+	font-family: "Brenner Slab";
+	font-weight: 600;
 }
+/* D */
 .p0.on span:nth-of-type(3) {
 	opacity: 1;
 	transition: 0s .5s;
 	margin-right: -.25em;
+	font-weight: 200;
+	color: lime;
+	background-color: black;
+	padding: 5px;
+	font-family: "Brenner Slab";
 	font-weight: 600;
 }
+/* 6 */
 .p0.on span:nth-of-type(4) {
 	opacity: 1;
 	transition: 0s .7s;
 	margin-right: -.25em;
-	font-weight: 800;
+	font-weight: 200;
+	color: lime;
+	background-color: black;
+	padding: 5px;
+	font-family: "Brenner Slab";
+	font-weight: 600;
 }
+/* - */
 .p0.on span:nth-of-type(5) {
 	opacity: 1;
 	transition: 0s 1.1s;
-	margin-right: -.25em;
-	/* font-family: "brenner sans"; */
+	margin-right: -.26em;
+	color: lime;
+	background-color: black;
+	padding: 5px;
+	font-family: "Brenner Slab";
+	font-weight: 600;
 }
+/* 3 */
 .p0.on span:nth-of-type(6) {
 	opacity: 1;
 	transition: 0s 1.4s;
 	margin-right: -.25em;
-	/* font-family: "brenner display"; */
+	color: lime;
+	background-color: black;
+	padding: 5px;
+	font-family: "Brenner Slab";
+	font-weight: 600;
 }
+/* . */
 .p0.on span:nth-of-type(7) {
 	opacity: 1;
 	transition: 0s 1.7s;
 	margin-right: -.25em;
-	/* font-family: "brenner script"; */
+	color: lime;
+	background-color: black;
+	padding: 5px;
+	font-family: "Brenner Slab";
+	font-weight: 600;
 }
+/* 7 */
 .p0.on span:nth-of-type(8) {
 	opacity: 1;
 	transition: 0s 2s;
-	/* font-family: "brenner script"; */
+	color: lime;
+	background-color: black;
+	padding: 5px;
+	font-family: "Brenner Slab";
+	font-weight: 600;
 }
+/* Let's */
 .p0.on span:nth-of-type(9) {
 	opacity: 1;
 	transition: 0s 3s;
-	/* font-family: "brenner Sans condensed"; */
 }
+/*  begin */
 .p0.on span:nth-of-type(10) {
 	opacity: 1;
 	transition: 0s 3.2s;
-	/* font-family: "brenner mono"; */
 }
+/*  ready? */
 .p0.on span:nth-of-type(11) {
 	opacity: 1;
 	transition: 0s 3.7s;
-	/* font-family: "brenner slab"; */
 }
+
+/* ================================================ */
