--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -377,9 +377,4 @@ You probably want to change the styling.
 }
 
 
-
-/* test  */
-
-.test {
-	background-color: red;
-}
+/* .interlinked { TESTEN!} */
