--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -6,10 +6,11 @@ Hide them when they receive the class 'off'
 Feel free to adjust the defaults to your needs.
 ********************************************** */
 
-/* code om de achtergrond van kleur te laten veranderen (begin)*/
+/* ================================================ */
+/*						Achtergrond kleur fade								*/
+/* ================================================ */
 
 html {
-	/* background-image: radial-gradient(circle at center center, rgb(32,32,32),rgb(8, 8, 8)); */
 	animation: bgcolor infinite 10s;
 }
 
@@ -39,51 +40,78 @@ html {
 	background: #262525;
 }
 }
-/* code om de achtergrond van kleur te laten veranderen (eind)*/
+
+/* =======================Einde=================== */
+
+
+/* ================================================ */
+/*				 				Placeholder - Video								*/
+/* ================================================ */
 
 #video-placeholder {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 15em;
+	margin-top: 10em;
+	width: 50em;
+	height: 35em;
 	/* box-shadow: 1px 1px 50px 1px #A5B19E; */
 }
+
+/* =======================Einde=================== */
+
+/* ================================================ */
+/*				 							Captions										*/
+/* ================================================ */
 
 #closed-captions p {
 	opacity: 0;
 	transition: .05s;
 	position: absolute;
 }
+
 #closed-captions .on {
 	opacity: 1;
 }
+
 #closed-captions .off {
 	transition: .2s;
 	opacity: 0;
 }
 
-.voice1 { /* robot voice */
+/* =======================Einde=================== */
+
+/* ================================================ */
+/*				 							Voices											*/
+/* ================================================ */
+
+/* =====Robot Voice====== */
+.voice1 {
 	padding: 5px;
 	color: White;
-	margin-top: -20em;
+	margin-top: -26em;
 	font-size: 24px;
-	margin-left: 31.6%;
+	margin-left: 25.5%;
 	text-align: left;
-	font-family: "Brenner Sans Light Italic";
 	max-width: 25.3em;
+	font-family: "Brenner Sans Light";
 }
+/* =====Eind====== */
 
-.voice2 { /* KD6 voice */
+/* =====KD6 Voice====== */
+.voice2 {
 	color: white;
 	font-size: 24px;
 	font-style: normal;
-	margin-left: 31.6%;
+	margin-left: 25.5%;
 	text-align: left;
 	font-family: "Brenner Sans Light";
 	max-width: 25.3em;
 }
+/* =====Eind====== */
 
-.voice3 { /* fuck off skin-job */
+/* =====By-passer====== */
+.voice3 {
 	color: white;
 	font-size: 16px;
 	margin-left: 39em;
@@ -91,8 +119,10 @@ html {
 	transform: rotate(-15deg);
 	font-family: "Brenner Mono Light Italic";
 }
+/* =====Eind====== */
 
-.voice4 { /* you are done voice */
+/* =====Intercome Voice====== */
+.voice4 {
 	color: white;
 	margin-top: -9em;
 	font-size: 24px;
@@ -102,13 +132,21 @@ html {
 	font-family: "Brenner Sans Light";
 	max-width: 25.3em;
 }
+/* =====Eind====== */
+
+/* =======================Einde=================== */
+
+/* ================================================ */
+/*					 				Extra classes 									*/
+/* ================================================ */
 
 .cells { /* cells - voice1 */
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
+	color: White;
+	font-family: "Brenner Sans Condensed";
 	font-weight: 600;
+	font-size: 300px;
+	margin-top: -1.5em;
+	position: absolute;
 }
  .interlinked {
 	 color: lime;
@@ -117,6 +155,8 @@ html {
 	 font-family: "Brenner Slab";
 	 font-weight: 600;
  }
+
+/* =======================Einde=================== */
 
 /* **********************************************
 The first paragraph, with extended timing for
@@ -127,24 +167,27 @@ The first paragraph, with extended timing for
 You probably want to change the styling.
 ********************************************** */
 
+/* ================================================ */
+/*					 			Enkele woorden (test) 						*/
+/* ================================================ */
+
 
 /* ================================================ */
 /*		Officer K D 6 - 3 . 7. Let’s begin. Ready?		*/
 /* ================================================ */
 
-.p0 span {
+/* .p0 span {
 	opacity: 0;
-	/* font-family: brenner; */
-}
+} */
 
 /* Officer */
-.p0.on span:first-of-type {
+/* .p0.on span:first-of-type {
 	opacity: 1;
 	transition: 0s;
 	font-weight: 200;
-}
+} */
 /* K */
-.p0.on span:nth-of-type(2) {
+/* .p0.on span:nth-of-type(2) {
 	opacity: 1;
 	transition: 0s .4s;
 	margin-right: -.25em;
@@ -154,286 +197,189 @@ You probably want to change the styling.
 	padding: 5px;
 	font-family: "Brenner Slab";
 	font-weight: 600;
-}
-/* D */
-.p0.on span:nth-of-type(3) {
-	opacity: 1;
-	transition: 0s .5s;
-	margin-right: -.25em;
-	font-weight: 200;
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
-}
-/* 6 */
-.p0.on span:nth-of-type(4) {
-	opacity: 1;
-	transition: 0s .7s;
-	margin-right: -.25em;
-	font-weight: 200;
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
-}
-/* - */
-.p0.on span:nth-of-type(5) {
-	opacity: 1;
-	transition: 0s 1.1s;
-	margin-right: -.26em;
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
-}
-/* 3 */
-.p0.on span:nth-of-type(6) {
-	opacity: 1;
-	transition: 0s 1.4s;
-	margin-right: -.25em;
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
-}
-/* . */
-.p0.on span:nth-of-type(7) {
-	opacity: 1;
-	transition: 0s 1.7s;
-	margin-right: -.25em;
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
-}
-/* 7 */
-.p0.on span:nth-of-type(8) {
-	opacity: 1;
-	transition: 0s 2s;
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
-}
-/* Let's */
-.p0.on span:nth-of-type(9) {
-	opacity: 1;
-	transition: 0s 3s;
-}
-/*  begin */
-.p0.on span:nth-of-type(10) {
-	opacity: 1;
-	transition: 0s 3.2s;
-}
-/*  ready? */
-.p0.on span:nth-of-type(11) {
-	opacity: 1;
-	transition: 0s 3.7s;
-	font-family: "Brenner Mono";
-	font-weight:200;
-}
+} */
 
 /* ======================Einde Zin================= */
+
 
 /* ================================================ */
 /*												Yes, sir									*/
 /* ================================================ */
 
-.p1 span {
-	opacity: 0;
-	/* font-family: brenner; */
-}
-
-/* yes, */
-.p1.on span:first-of-type {
-	opacity: 1;
-	transition: 0s;
-}
-/* sir */
-.p1.on span:nth-of-type(2) {
-	opacity: 1;
-	transition: 0s .4s;
-}
-
 /* ======================Einde Zin================= */
+
 
 /* ================================================ */
 /*						Recite your baseline.									*/
 /* ================================================ */
 
-.p2 span {
-	opacity: 0;
-	/* font-family: brenner; */
-}
-
-/* Recite */
-.p2.on span:first-of-type {
-	opacity: 1;
-	transition: 0s;
-}
-/* Your */
-.p2.on span:nth-of-type(2) {
-	opacity: 1;
-	transition: 0s;
-}
-
-/* baseline. */
-.p2.on span:nth-of-type(3) {
-	opacity: 1;
-	transition: 0s;
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
-}
-
-
 /* ======================Einde Zin================= */
+
 
 /* ================================================ */
 /*		And blood-black nothingness began to spin			*/
 /* ================================================ */
 
-.p3 span {
-	opacity: 0;
-	/* font-family: brenner; */
-}
-/* and */
-.p3.on span:first-of-type {
-	opacity: 1;
-	transition: 0s;
-}
-/* blood-back */
-.p3.on span:nth-of-type(2) {
-	opacity: 1;
-	transition: 0s;
-	color: #8a0303;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
-}
-/* nothingness */
-.p3.on span:nth-of-type(3) {
-	opacity: 1;
-	transition: 0s;
-}
-/* began */
-.p3.on span:nth-of-type(4) {
-	opacity: 1;
-	transition: 0s;
-}
-/* to */
-.p3.on span:nth-of-type(5) {
-	opacity: 1;
-	transition: 0s;
-}
-/* spin */
-.p3.on span:nth-of-type(6) {
-	opacity: 1;
-	transition: 0s;
-}
+/* ======================Einde Zin================= */
+
+
+/* ================================================ */
+/*   A system of cells interlinked within cells,  	*/
+/* ================================================ */
 
 /* ======================Einde Zin================= */
 
-/* ================================================ */
-/*   A system of cells interlinked within cells,	*/
-/* ================================================ */
-
-.p4 span {
-	opacity: 0;
-	/* font-family: brenner; */
-}
-/* A */
-.p4.on span:first-of-type {
-	opacity: 1;
-	transition: 0s;
-}
-/* system */
-.p4.on span:nth-of-type(2) {
-	opacity: 1;
-	transition: 0s;
-}
-/* of */
-.p4.on span:nth-of-type(3) {
-	opacity: 1;
-	transition: 0s;
-}
-/* cells */
-.p4.on span:nth-of-type(4) {
-	opacity: 1;
-	transition: 0s;
-}
-/* -interlinked- */
-.p4.on span:nth-of-type(5) {
-	opacity: 1;
-	transition: 0s;
-}
-/* within */
-.p4.on span:nth-of-type(6) {
-	opacity: 1;
-	transition: 0s;
-}
-/* cells, */
-.p4.on span:nth-of-type(7) {
-	opacity: 1;
-	transition: 0s;
-}
-/* ======================Einde Zin=========================== */
 
 /* ========================================================== */
 /* 						Have you ever been in an institution?						*/
 /* ========================================================== */
 
-.p10 span {
-	opacity: 0;
-	/* font-family: brenner; */
+
+/* =======================Einde=================== */
+
+
+
+/* ================================================ */
+/*					 					soundcaptions 								*/
+/* ================================================ */
+
+/* =====drum===== */
+.soundcaption0 {
+	font-family: "Brenner Sans";
+	color: white;
+	font-size: 24px;
+	margin: -15em 0px 0px 52.5em;
 }
-/* have */
-.p10.on span:first-of-type {
-	opacity: 1;
-	transition: 0s;
+/* =====alarm===== */
+.soundcaption1 {
+	font-family: "Brenner Sans";
+	color: red;
+	font-size: 24px;
+	margin: -13.5em 0px 0px 52.5em;
 }
-/* you */
-.p10.on span:nth-of-type(2) {
-	opacity: 1;
-	transition: 0s;
+/* =====high freq 1===== */
+.soundcaption2 {
+	font-family: "Brenner Sans";
+	color: blue;
+	font-size: 24px;
+	margin: -13.5em 0px 0px 52.5em;
 }
-/* ever */
-.p10.on span:nth-of-type(3) {
-	opacity: 1;
-	transition: 0s;
+/* =====low freq 1===== */
+.soundcaption3 {
+	font-family: "Brenner Sans";
+	color: yellow;
+	font-size: 24px;
+	margin: -13.5em 0px 0px 52.5em;
 }
-/* been */
-.p10.on span:nth-of-type(4) {
-	opacity: 1;
-	transition: 0s;
+/* =====high freq 2===== */
+.soundcaption4 {
+	font-family: "Brenner Sans";
+	color: pink;
+	font-size: 24px;
+	margin: -13.5em 0px 0px 52.5em;
 }
-/* in */
-.p10.on span:nth-of-type(5) {
-	opacity: 1;
-	transition: 0s;
+.soundcaption5 {
+	font-family: "Brenner Sans";
+	color: green;
+	font-size: 24px;
+	margin: -13.5em 0px 0px 52.5em;
 }
-/* an */
-.p10.on span:nth-of-type(6) {
-	opacity: 1;
-	transition: 0s;
+.soundcaption6 {
+	font-family: "Brenner Sans";
+	color: brown;
+	font-size: 24px;
+	margin: -13.5em 0px 0px 52.5em;
 }
-/* institution */
-.p10.on span:nth-of-type(7) {
-	opacity: 1;
-	transition: 0s;
-	color: lime;
-	background-color: black;
-	padding: 5px;
-	font-family: "Brenner Slab";
-	font-weight: 600;
+.soundcaption7 {
+	font-family: "Brenner Sans";
+	color: white;
+	font-size: 24px;
+	margin: -13.5em 0px 0px 52.5em;
 }
+.soundcaption8 {
+	font-family: "Brenner Sans";
+	color: purple;
+	font-size: 24px;
+	margin: -13.5em 0px 0px 52.5em;
+}
+/* 0:33 tot 1:15 */
+.soundcaption9 {
+	font-family: "Brenner Sans";
+	color: orange;
+	font-size: 24px;
+	margin: -22.5em 0px 0px 52.5em;
+	text-align: center;
+}
+.soundcaption10 {
+	font-family: "Brenner Sans";
+	color: aqua;
+	font-size: 24px;
+	margin: -22.5em 0px 0px 52.5em;
+}
+/* =======================Einde=================== */
+
+/* .sound0 iframe {
+		animation: video infinite 10s;
+	}
+
+	@keyframes video {
+
+	0% {
+		box-shadow: 1px 1px 50px 1px red;
+	}
+
+	20% {
+		background: yellow;
+	}
+
+	40% {
+		box-shadow: 1px 1px 50px 1px red;
+	}
+
+	60% {
+		box-shadow: 1px 1px 50px 1px yellow;
+	}
+
+	80% {
+		box-shadow: 1px 1px 50px 1px red;
+	}
+
+	100% {
+		box-shadow: 1px 1px 50px 1px yellow;
+	}
+	}
+
+.sound1 iframe {
+	animation: shadow0 1s;
+}
+
+@keyframes shadow0 {
+
+100% {
+	box-shadow: 1px 1px 50px 1px red;
+}
+{
+	transition: ease-out 1s;
+}
+}
+
+.sound2 iframe {
+animation: shadow1 1s;
+}
+
+@keyframes shadow1 {
+
+100% {
+	box-shadow: 1px 1px 50px 1px blue;
+}
+}
+
+.sound3 iframe{ 	animation: shadow2 1s;
+}
+
+@keyframes shadow2 {
+
+100% {
+	box-shadow: 1px 1px 50px 1px yellow;
+}
+} */
